# fast-decimal

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: decimal.rs  error.rs  lib.rs  ops.rs  parse.rs
